[CA] Apòstrofs d'àrees (expansion_rules > area)
Apòstrofs a àrees afegides.

--- a/sentences/ca/_common.yaml
+++ b/sentences/ca/_common.yaml
@@ -47,8 +47,8 @@ lists:
       - in: "f"
         out: "fahrenheit"
 expansion_rules:
-  name: "[el | la |l' ]{name}"
-  area: "[en el | en la | en | del | de la | al | a la | a] {area}"
+  name: "[el | la | l' ]{name}"
+  area: "[en el | en la | en l' | en | del | de la | de l' | al | a la | a l' | a] {area}"
   quin_es: "(quin és | quina és | que es)"
   lluentor: "{brightness} [per cent]"
   engega: "(encén | engega | posa | activa)"
